[FIXED] Several bugs: images sometimes did not appear, footer was out of order and overlapping of the filter menu

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -6,6 +6,7 @@ footer {
     width: 100%;
     border-top: 1px solid #CCCCCC;
     bottom: 0;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
