--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -5,7 +5,7 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    background-image: url(/web_static/images/logo-AirBnb.png);
+    background-image: url(https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png);
     background-repeat: no-repeat;
     background-position-x: 20px;
     background-position-y: center;
